<resources>
    <string name="app_name">Register</string>
    <string name="sign_up">Sign up</string>
    <string name="have_account">Already have an account? Login</string>
    <string name="full_name">FULL NAME</string>
    <string name="name_hint">Enter Name</string>
    <string name="signupemail">EMAIL</string>
    <string name="email_hint">Enter Email</string>
    <string name="passwordSU">PASSWORD</string>
    <string name="password_SU">Enter Password</string>
    <string name="or">or</string>
    <string name="create_account">  Create Account  </string>
    <string name="orr">or</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="sign_me_up">PROCEED</string>
    <string name="please_verify_your_credentials">PLEASE VERIFY YOUR CREDENTIALS</string>
</resources>
